--- a/CarSite.Service/CarSite.Service.csproj
+++ b/CarSite.Service/CarSite.Service.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CarSite.DAL\CarSite.DAL.csproj" />
+    <ProjectReference Include="..\CarSite.Domain\CarSite.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
